--- a/paywall.html
+++ b/paywall.html
@@ -16,12 +16,14 @@
 
 <body>
     <div class="container">
-        <h3>Random ID Generator</h3>
-        <button id="generate">Generate</button>
+        <h3>Read Paywalled News Content</h3>
+        <button id="generate">Read</button>
         <div>
-            <p id="id"></p>
+            <p id="content"></p>
         </div>
     </div>
+    <p>Extracted Tag: <span id="tagType"></span></p>
+    <p>Content: <span id="textContent"></span></p>
     <script src="generator.js"></script>
 </body>
 
